--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,52 +1,42 @@
 pipeline {
     agent any
 
-    tools {
-        git 'DefaultGit'
-    }
-
     environment {
-        IMAGE_NAME = "python-country-app"
-        TAG = "${BUILD_NUMBER}"
-        DOCKER_REGISTRY = "nexus.example.com:8082"
+        IMAGE_NAME = "python-ci-cd-app"
+        IMAGE_TAG = "1.0"
+        NEXUS_DOCKER_REPO = "nexus.example.com:8083"
+        SONARQUBE_SERVER = "SonarQube"
     }
 
     stages {
 
-stage('Checkout') {
-    steps {
-        git branch: 'master',
-            url: 'https://github.com/swetha-200160/python-.git',
-            credentialsId: 'gitrepo'
-    }
-}
+        stage('Checkout') {
+            steps {
+                git branch: 'master',
+                    url: 'https://github.com/swetha-200160/python-.git'
+            }
+        }
 
-       
+        stage('Install Dependencies & Test') {
+            steps {
+                sh '''
+                pip install -r requirements.txt
+                pytest
+                '''
+            }
+        }
 
         stage('SonarQube Analysis') {
             steps {
-                withSonarQubeEnv('sonarqube-server') {
-                    sh '''
-                    sstage('Checkout') {
-    steps {
-        git branch: 'master',
-            url: 'https://github.com/swetha-200160/python-country-app.git',
-            credentialsId: 'github-token'
-    }
-}
-onar-scanner \
-                    -Dsonar.projectKey=python-country-app \
-                    -Dsonar.sources=. \
-                    -Dsonar.language=py \
-                    -Dsonar.exclusions=**/*.png,.vscode/**
-                    '''
+                withSonarQubeEnv("${SONARQUBE_SERVER}") {
+                    sh 'sonar-scanner'
                 }
             }
         }
 
         stage('Quality Gate') {
             steps {
-                timeout(time: 2, unit: 'MINUTES') {
+                timeout(time: 1, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
                 }
             }
@@ -54,36 +44,32 @@ onar-scanner \
 
         stage('Build Docker Image') {
             steps {
-                sh """
-                docker build -t ${DOCKER_REGISTRY}/${IMAGE_NAME}:${TAG} .
-                """
+                sh '''
+                docker build -t ${IMAGE_NAME}:${IMAGE_TAG} .
+                '''
             }
         }
 
         stage('Push Image to Nexus') {
             steps {
-                withCredentials([usernamePassword(
-                    credentialsId: 'nexus-cred',
-                    usernameVariable: 'NEXUS_USER',
-                    passwordVariable: 'NEXUS_PASS'
-                )]) {
-                    sh """
-                    docker login ${DOCKER_REGISTRY} -u $NEXUS_USER -p $NEXUS_PASS
-                    docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:${TAG}
-                    """
-                }
+                sh '''
+                docker tag ${IMAGE_NAME}:${IMAGE_TAG} \
+                ${NEXUS_DOCKER_REPO}/${IMAGE_NAME}:${IMAGE_TAG}
+
+                docker push ${NEXUS_DOCKER_REPO}/${IMAGE_NAME}:${IMAGE_TAG}
+                '''
             }
         }
 
-        stage('Deploy Application') {
+        stage('Deploy Container') {
             steps {
-                sh """
+                sh '''
                 docker rm -f python-app || true
                 docker run -d \
                   --name python-app \
                   -p 5000:5000 \
-                  ${DOCKER_REGISTRY}/${IMAGE_NAME}:${TAG}
-                """
+                  ${NEXUS_DOCKER_REPO}/${IMAGE_NAME}:${IMAGE_TAG}
+                '''
             }
         }
     }
